--- a/index.html
+++ b/index.html
@@ -9,47 +9,53 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <a class="navbar-brand " href="index.html" >INNOVAX</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">*Home*</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">*Gallery*</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">*About Us*</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">*Contact Us*</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
     
     <div class="container-fluid">
 
-        <div class="row landing">
+        <div class="row landing justify-content-center text-center">
             
-            <div class="col-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-                    <a class="navbar-brand" href="index.html">INNOVAX</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                      </ul>
-                    </div>
-                </nav>
+            <div class="col-md-6 text-white">
+                <h1>Inovative Designs.</h1>
+                <h1>Inovative Ideas.</h1>
+                <h1>Inovative Thinking.</h1>
             </div>
 
-            <div class="col-md-12 text-center">
-                <img src="images/logo.jpg" alt="logo" class="img-thumbnail logo" id="logo">
+            <div class="col-md-6 text-center">
+                <img src="images/logo.jpg" alt="logo" class="img-thumbnail logo " style="height: 200px;">
             </div>
 
         </div>
 
     </div>
 
-
-    <script src="js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+    <script src="js/main.js"></script>
+   </body>
 </html>
