--- a/index.html
+++ b/index.html
@@ -38,17 +38,63 @@
 
         <div class="row landing justify-content-center text-center">
             
-            <div class="col-md-6 text-white">
+            <div class="col-md-6 text-center p-2">
+                <img src="images/logo.jpg" alt="logo" class="img-thumbnail logo " style="height: 200px;">
+            </div>
+
+            <div class="col-md-6 text-white p-2">
                 <h1>Inovative Designs.</h1>
                 <h1>Inovative Ideas.</h1>
                 <h1>Inovative Thinking.</h1>
             </div>
 
-            <div class="col-md-6 text-center">
-                <img src="images/logo.jpg" alt="logo" class="img-thumbnail logo " style="height: 200px;">
-            </div>
-
         </div>
+
+        <div class="row jumbotron architect_background mb-0 rounded-0">
+            <div class="col-md-12 text-center pb-3">
+                <h2>Architechure</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6 d-flex align-items-center">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/architecture_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                </div>
+            </div>
+        </div>
+
+        <div class="row jumbotron interior_background mb-0 rounded-0 text-white">
+            <div class="col-md-12 text-center pb-3">
+                <h2>Interior Design</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="images/interior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                </div>
+                <div class="col-md-6 d-flex align-items-center">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row  jumbotron exterior_background mb-0 rounded-0 text-white">
+            <div class="col-md-12 text-center pb-3">
+                <h2>Exterior Design</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6 d-flex align-items-center">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/exterior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
