--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
             <div class="col-md-12 text-center pb-3">
                 <h2>Architechure</h2>
             </div>
-            <div class="row">
-                <div class="col-md-6 d-flex align-items-center">
+            <div class="row d-flex align-items-center">
+                <div class="col-md-6 ">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                    <br>
+                    <p><a href="#" class="btn btn-primary">Learn More</a></p>
                 </div>
                 <div class="col-md-6">
                     <img src="images/architecture_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
@@ -69,13 +70,14 @@
             <div class="col-md-12 text-center pb-3">
                 <h2>Interior Design</h2>
             </div>
-            <div class="row">
+            <div class="row d-flex align-items-center">
                 <div class="col-md-6">
                     <img src="images/interior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
                 </div>
-                <div class="col-md-6 d-flex align-items-center">
+                <div class="col-md-6">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                    <br>
+                    <p><a href="#" class="btn btn-primary">Learn More</a></p>
                 </div>
             </div>
         </div>
@@ -84,10 +86,11 @@
             <div class="col-md-12 text-center pb-3">
                 <h2>Exterior Design</h2>
             </div>
-            <div class="row">
-                <div class="col-md-6 d-flex align-items-center">
+            <div class="row d-flex align-items-center">
+                <div class="col-md-6">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                    <br>
+                    <p><a href="#" class="btn btn-primary">Learn More</a></p>
                 </div>
                 <div class="col-md-6">
                     <img src="images/exterior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
