--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
         <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">*Home*</a>
+                <a class="nav-link" href="#architecture">*Architechure*</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">*Gallery*</a>
+                <a class="nav-link" href="#interior">*Interior Design*</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">*About Us*</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">*Contact Us*</a>
+                <a class="nav-link" href="#exterior">*Exterior Design*</a>
             </li>
           </ul>
         </div>
@@ -50,7 +47,7 @@
 
         </div>
 
-        <div class="row jumbotron architect_background mb-0 rounded-0">
+        <div class="row jumbotron architect_background mb-0 rounded-0" id="architecture">
             <div class="col-md-12 text-center pb-3">
                 <h2>Architechure</h2>
             </div>
@@ -66,7 +63,7 @@
             </div>
         </div>
 
-        <div class="row jumbotron interior_background mb-0 rounded-0 text-white">
+        <div class="row jumbotron interior_background mb-0 rounded-0 text-white" id="interior">
             <div class="col-md-12 text-center pb-3">
                 <h2>Interior Design</h2>
             </div>
@@ -82,7 +79,7 @@
             </div>
         </div>
 
-        <div class="row  jumbotron exterior_background mb-0 rounded-0 text-white">
+        <div class="row  jumbotron exterior_background mb-0 rounded-0 text-white" id="exterior">
             <div class="col-md-12 text-center pb-3">
                 <h2>Exterior Design</h2>
             </div>
