adding animation to home text

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </div>
 
             <div class="col-md-6 text-white p-2">
-                <h1>Inovative Designs.</h1>
-                <h1>Inovative Ideas.</h1>
-                <h1>Inovative Thinking.</h1>
+                <h1 class="inovative_text">Inovative Designs.</h1>
+                <h1 class="inovative_text">Inovative Ideas.</h1>
+                <h1 class="inovative_text">Inovative Thinking.</h1>
             </div>
 
         </div>
