--- a/index.html
+++ b/index.html
@@ -48,49 +48,55 @@
         </div>
 
         <div class="row jumbotron architect_background mb-0 rounded-0" id="architecture">
-            <div class="col-md-12 text-center pb-3">
-                <h2>Architechure</h2>
-            </div>
-            <div class="row d-flex align-items-center">
-                <div class="col-md-6 ">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
-                    <br>
-                    <p><a href="#" class="btn btn-primary">Learn More</a></p>
+            <div class="container">
+                <div class="col-md-12 text-center pb-3">
+                    <h2>Architechure</h2>
                 </div>
-                <div class="col-md-6">
-                    <img src="images/architecture_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-6 ">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                        <br>
+                        <p><a href="#" class="btn btn-primary">Learn More</a></p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/architecture_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="row jumbotron interior_background mb-0 rounded-0 text-white" id="interior">
-            <div class="col-md-12 text-center pb-3">
-                <h2>Interior Design</h2>
-            </div>
-            <div class="row d-flex align-items-center">
-                <div class="col-md-6">
-                    <img src="images/interior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+            <div class="container">
+                <div class="col-md-12 text-center pb-3">
+                    <h2>Interior Design</h2>
                 </div>
-                <div class="col-md-6">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
-                    <br>
-                    <p><a href="#" class="btn btn-primary">Learn More</a></p>
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-6">
+                        <img src="images/interior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                    </div>
+                    <div class="col-md-6">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                        <br>
+                        <p><a href="#" class="btn btn-primary">Learn More</a></p>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="row  jumbotron exterior_background mb-0 rounded-0 text-white" id="exterior">
-            <div class="col-md-12 text-center pb-3">
-                <h2>Exterior Design</h2>
-            </div>
-            <div class="row d-flex align-items-center">
-                <div class="col-md-6">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
-                    <br>
-                    <p><a href="#" class="btn btn-primary">Learn More</a></p>
+            <div class="container">
+                <div class="col-md-12 text-center pb-3">
+                    <h2>Exterior Design</h2>
                 </div>
-                <div class="col-md-6">
-                    <img src="images/exterior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-6">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                        <br>
+                        <p><a href="#" class="btn btn-primary">Learn More</a></p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/exterior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                    </div>
                 </div>
             </div>
         </div>
