new images and homepage layout

--- a/index.html
+++ b/index.html
@@ -47,19 +47,23 @@
 
         </div>
 
-        <div class="row jumbotron architect_background mb-0 rounded-0" id="architecture">
+        <div class="row jumbotron architect_background mb-0 rounded-0 text-white" id="architecture">
             <div class="container">
                 <div class="col-md-12 text-center pb-3">
                     <h2>Architechure</h2>
                 </div>
                 <div class="row d-flex align-items-center">
                     <div class="col-md-6 ">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                        <p>
+                            Get yourself admirable designs with dextrous architects. <br>
+                            Looking to restore and conserve old structures or develop new ways of using existing spaces? we got you. <br>
+                            A perfect design provides a humble abode.
+                        </p>
                         <br>
                         <p><a href="#" class="btn btn-primary">Learn More</a></p>
                     </div>
                     <div class="col-md-6">
-                        <img src="images/architecture_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
+                        <img src="images/architecture_design2.jpg" alt="" class="img-thumbnail img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -75,7 +79,11 @@
                         <img src="images/interior_design.jpg" alt="" class="img-thumbnail img-fluid rounded">
                     </div>
                     <div class="col-md-6">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                        <p>
+                            Hoping to rest in a meticulous home? <br>
+                            Finding it hard to reconcile thoughts on what to add or remove from the inside your home? <br>
+                            Wishing you had a professional and personal interior designer.
+                        </p>
                         <br>
                         <p><a href="#" class="btn btn-primary">Learn More</a></p>
                     </div>
@@ -90,7 +98,11 @@
                 </div>
                 <div class="row d-flex align-items-center">
                     <div class="col-md-6">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quos distinctio iure vel, perferendis laborum quas magni ex numquam illum at error suscipit deserunt earum voluptate necessitatibus, mollitia alias tenetur.</p>
+                        <p>
+                            Construction is never complete without a gratifying exterior. <br>
+                            The exterior is a first impression and reception. <br>
+                            So lets get you looking the best of the best.
+                        </p>
                         <br>
                         <p><a href="#" class="btn btn-primary">Learn More</a></p>
                     </div>
