--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <a class="navbar-brand " href="index.html" >INNOVAX</a>
+        <a class="navbar-brand " href="index.html" style="text-shadow: 2px 2px 4px #000000;">INNOVAX</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
